Add EEPROM storage and fix time sync

--- a/project.properties
+++ b/project.properties
@@ -1,3 +1,9 @@
 name=BoronTest
 #assetOtaDir=assets
 platform=boron
+dependencies.FlowSensor=1.0.0
+dependencies.DataReporter=1.0.0
+dependencies.SystemMonitor=1.0.0
+dependencies.Storage=1.0.0
+# Add compiler flags to suppress warnings
+CFLAGS+=-Wno-deprecated-declarations -Wno-unused-variable
