--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "particle.targetPlatform": "boron",
     "particle.firmwareVersion": "6.1.1",
     "particle.targetDevice": "spark_owl",
-    "particle.debugWarningShown": true
+    "particle.debugWarningShown": true,
+    "idf.portWin": "COM49"
 }
